Added audio toggle api
